// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/dashboard/production/recipes > sin filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "version_receta": true,
          },
        },
        "producto": true,
        "usuario": true,
        "version_receta": {
          "include": {
            "_count": {
              "select": {
                "detalle_receta": true,
                "orden_trabajo": true,
              },
            },
          },
          "orderBy": {
            "fecha_version": "desc",
          },
          "take": 1,
          "where": {
            "estado": "vigente",
          },
        },
      },
      "orderBy": {
        "fecha_creacion": "desc",
      },
      "where": {},
    },
    "prisma": "receta_tecnica.findMany",
  },
  {
    "args": {
      "orderBy": {
        "nombre_producto": "asc",
      },
      "select": {
        "id_producto": true,
        "nombre_producto": true,
      },
      "where": {
        "estado": true,
      },
    },
    "prisma": "producto.findMany",
  },
]
`;

exports[`/dashboard/production/recipes > sin filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<span aria-current="page">Recetas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Recetas técnicas</h1>
<p>Administra recetas por producto, versión vigente e historial de materiales requeridos para producción.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a producción">
<svg/>Volver a producción</button>
<a data-variant="default" href="/dashboard/production/recipes/new">Nueva receta</a>
</div>
</div>
</section>
<form>
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar receta, código o producto..." name="q" value=""/>
</div>
<div>
<label for="product">Producto</label>
<select id="product" name="product">
<option value="" selected="">Todos los productos</option>
<option value="id_producto-1">nombre_producto-1</option>
<option value="id_producto-2">nombre_producto-2</option>
</select>
</div>
<div>
<label for="status">Estado</label>
<select id="status" name="status">
<option value="" selected="">Todos los estados</option>
<option value="activa">Activa</option>
<option value="inactiva">Inactiva</option>
</select>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
</div>
<div>
<a data-variant="clear" href="/dashboard/production/recipes">Limpiar filtros</a>
</div>
</form>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Recetas registradas</div>
</div>
</div>
<div>
<p>2</p>
<p>Total en el sistema.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Recetas activas</div>
</div>
</div>
<div>
<p>0</p>
<p>Disponibles para uso.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Con versión vigente</div>
</div>
</div>
<div>
<p>2</p>
<p>Listas para producir.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Sin versión vigente</div>
</div>
</div>
<div>
<p>0</p>
<p>Requieren atención.</p>
</div>
</div>
</section>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Receta</th>
<th>Producto</th>
<th>Fecha</th>
<th>Versión vigente</th>
<th>Historial</th>
<th>Materiales</th>
<th>Estado</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_receta-1</td>
<td>
<div>nombre_receta-1</div>
<p>descripcion-1</p>
</td>
<td>
<div>nombre_producto-1</div>
<p>categoria-1</p>
</td>
<td>1 jul. 2026</td>
<td>
<div>
<p>numero_version-1</p>
<p>id_version_receta-1</p>
</div>
</td>
<td>2 versión(es)</td>
<td>2</td>
<td>
<span data-variant="outline">estado-1</span>
</td>
<td>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-1/versions">Ver historial</a>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_receta" value="id_receta-1"/>
<input type="hidden" name="estado" value="estado-1"/>
<button data-variant="link" type="submit">Activar</button>
</form>
</div>
</td>
</tr>
<tr>
<td>id_receta-2</td>
<td>
<div>nombre_receta-2</div>
</td>
<td>
<div>nombre_producto-2</div>
<p>categoria-2</p>
</td>
<td>2 jul. 2026</td>
<td>
<div>
<p>numero_version-1</p>
<p>id_version_receta-1</p>
</div>
</td>
<td>2 versión(es)</td>
<td>2</td>
<td>
<span data-variant="outline">estado-2</span>
</td>
<td>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-2/versions">Ver historial</a>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_receta" value="id_receta-2"/>
<input type="hidden" name="estado" value="estado-2"/>
<button data-variant="link" type="submit">Activar</button>
</form>
</div>
</td>
</tr>
</tbody>
</table>
</div>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes > todos los filtros > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "version_receta": true,
          },
        },
        "producto": true,
        "usuario": true,
        "version_receta": {
          "include": {
            "_count": {
              "select": {
                "detalle_receta": true,
                "orden_trabajo": true,
              },
            },
          },
          "orderBy": {
            "fecha_version": "desc",
          },
          "take": 1,
          "where": {
            "estado": "vigente",
          },
        },
      },
      "orderBy": {
        "fecha_creacion": "desc",
      },
      "where": {
        "AND": [
          {
            "OR": [
              {
                "id_receta": {
                  "contains": "reja",
                  "mode": "insensitive",
                },
              },
              {
                "nombre_receta": {
                  "contains": "reja",
                  "mode": "insensitive",
                },
              },
              {
                "producto": {
                  "nombre_producto": {
                    "contains": "reja",
                    "mode": "insensitive",
                  },
                },
              },
            ],
          },
          {
            "id_producto": "PRO00000001",
          },
          {
            "estado": "activa",
          },
        ],
      },
    },
    "prisma": "receta_tecnica.findMany",
  },
  {
    "args": {
      "orderBy": {
        "nombre_producto": "asc",
      },
      "select": {
        "id_producto": true,
        "nombre_producto": true,
      },
      "where": {
        "estado": true,
      },
    },
    "prisma": "producto.findMany",
  },
]
`;

exports[`/dashboard/production/recipes > todos los filtros > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<span aria-current="page">Recetas</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Recetas técnicas</h1>
<p>Administra recetas por producto, versión vigente e historial de materiales requeridos para producción.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a producción">
<svg/>Volver a producción</button>
<a data-variant="default" href="/dashboard/production/recipes/new">Nueva receta</a>
</div>
</div>
</section>
<form>
<div>
<label for="q">Buscar</label>
<input id="q" placeholder="Buscar receta, código o producto..." name="q" value="reja"/>
</div>
<div>
<label for="product">Producto</label>
<select id="product" name="product">
<option value="">Todos los productos</option>
<option value="id_producto-1">nombre_producto-1</option>
<option value="id_producto-2">nombre_producto-2</option>
</select>
</div>
<div>
<label for="status">Estado</label>
<select id="status" name="status">
<option value="">Todos los estados</option>
<option value="activa" selected="">Activa</option>
<option value="inactiva">Inactiva</option>
</select>
</div>
<div>
<button data-variant="default" type="submit">Filtrar</button>
</div>
<div>
<a data-variant="clear" href="/dashboard/production/recipes">Limpiar filtros</a>
</div>
</form>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Recetas registradas</div>
</div>
</div>
<div>
<p>2</p>
<p>Total en el sistema.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Recetas activas</div>
</div>
</div>
<div>
<p>0</p>
<p>Disponibles para uso.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Con versión vigente</div>
</div>
</div>
<div>
<p>2</p>
<p>Listas para producir.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Sin versión vigente</div>
</div>
</div>
<div>
<p>0</p>
<p>Requieren atención.</p>
</div>
</div>
</section>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Receta</th>
<th>Producto</th>
<th>Fecha</th>
<th>Versión vigente</th>
<th>Historial</th>
<th>Materiales</th>
<th>Estado</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_receta-1</td>
<td>
<div>nombre_receta-1</div>
<p>descripcion-1</p>
</td>
<td>
<div>nombre_producto-1</div>
<p>categoria-1</p>
</td>
<td>1 jul. 2026</td>
<td>
<div>
<p>numero_version-1</p>
<p>id_version_receta-1</p>
</div>
</td>
<td>2 versión(es)</td>
<td>2</td>
<td>
<span data-variant="outline">estado-1</span>
</td>
<td>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-1/versions">Ver historial</a>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_receta" value="id_receta-1"/>
<input type="hidden" name="estado" value="estado-1"/>
<button data-variant="link" type="submit">Activar</button>
</form>
</div>
</td>
</tr>
<tr>
<td>id_receta-2</td>
<td>
<div>nombre_receta-2</div>
</td>
<td>
<div>nombre_producto-2</div>
<p>categoria-2</p>
</td>
<td>2 jul. 2026</td>
<td>
<div>
<p>numero_version-1</p>
<p>id_version_receta-1</p>
</div>
</td>
<td>2 versión(es)</td>
<td>2</td>
<td>
<span data-variant="outline">estado-2</span>
</td>
<td>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-2/versions">Ver historial</a>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_receta" value="id_receta-2"/>
<input type="hidden" name="estado" value="estado-2"/>
<button data-variant="link" type="submit">Activar</button>
</form>
</div>
</td>
</tr>
</tbody>
</table>
</div>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/[id]/versions > inexistente > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "producto": true,
        "usuario": true,
        "version_receta": {
          "include": {
            "_count": {
              "select": {
                "detalle_receta": true,
                "orden_trabajo": true,
              },
            },
            "detalle_receta": {
              "include": {
                "material": true,
              },
              "orderBy": {
                "id_detalle_receta": "asc",
              },
            },
            "usuario": true,
          },
          "orderBy": {
            "fecha_version": "desc",
          },
        },
      },
      "where": {
        "id_receta": "REC99999999",
      },
    },
    "prisma": "receta_tecnica.findUnique",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions > inexistente > resultado 1`] = `
{
  "html": null,
  "outcome": "notFound",
}
`;

exports[`/dashboard/production/recipes/[id]/versions > versiones > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "producto": true,
        "usuario": true,
        "version_receta": {
          "include": {
            "_count": {
              "select": {
                "detalle_receta": true,
                "orden_trabajo": true,
              },
            },
            "detalle_receta": {
              "include": {
                "material": true,
              },
              "orderBy": {
                "id_detalle_receta": "asc",
              },
            },
            "usuario": true,
          },
          "orderBy": {
            "fecha_version": "desc",
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
      },
    },
    "prisma": "receta_tecnica.findUnique",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions > versiones > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Versiones</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Versiones de receta</h1>
<p>Receta: nombre_receta-1 · Producto: nombre_producto-1 · descripcion-1</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a recetas">
<svg/>Volver a recetas</button>
</div>
</div>
</section>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Estado de receta</div>
</div>
</div>
<div>
<p>estado-1</p>
<p>Estado maestro de la receta.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Versión vigente</div>
</div>
</div>
<div>
<p>Sin versión</p>
<p>Versión usada actualmente.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Historial</div>
</div>
</div>
<div>
<p>2</p>
<p>Versiones registradas.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Órdenes asociadas</div>
</div>
</div>
<div>
<p>4</p>
<p>Usando alguna versión.</p>
</div>
</div>
</section>
<div role="alert">
<div>Esta receta no tiene una versión vigente. Crea una nueva versión o marca como vigente una versión válida del historial.</div>
</div>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Versión</th>
<th>Fecha</th>
<th>Motivo</th>
<th>Aprobado por</th>
<th>Materiales</th>
<th>Órdenes</th>
<th>Estado</th>
<th>Acciones</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_version_receta-1</td>
<td>numero_version-1</td>
<td>1 jul. 2026</td>
<td>motivo_cambio-1</td>
<td>nombres-1 apellidos-1</td>
<td>
<p>2 material(es)</p>
<div>
<p>nombre_material-1 - 11.50 unidad_medida-1</p>
<p>nombre_material-2 - 22.50 unidad_medida-2</p>
</div>
</td>
<td>2</td>
<td>
<span data-variant="outline">estado-1</span>
</td>
<td>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-1/versions/id_version_receta-1/details">Ver materiales</a>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_receta" value="id_receta-1"/>
<input type="hidden" name="id_version_receta" value="id_version_receta-1"/>
<button data-variant="link" type="submit">Marcar vigente</button>
</form>
<span>Usada en órdenes</span>
</div>
</td>
</tr>
<tr>
<td>id_version_receta-2</td>
<td>numero_version-2</td>
<td>2 jul. 2026</td>
<td>-</td>
<td>nombres-2 apellidos-2</td>
<td>
<p>2 material(es)</p>
<div>
<p>nombre_material-1 - 11.50 unidad_medida-1</p>
<p>nombre_material-2 - 22.50 unidad_medida-2</p>
</div>
</td>
<td>2</td>
<td>
<span data-variant="outline">estado-2</span>
</td>
<td>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-1/versions/id_version_receta-2/details">Ver materiales</a>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_receta" value="id_receta-1"/>
<input type="hidden" name="id_version_receta" value="id_version_receta-2"/>
<button data-variant="link" type="submit">Marcar vigente</button>
</form>
<span>Usada en órdenes</span>
</div>
</td>
</tr>
</tbody>
</table>
</div>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details > detalle de version > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "orden_trabajo": true,
          },
        },
        "detalle_receta": {
          "include": {
            "material": true,
          },
          "orderBy": {
            "id_detalle_receta": "asc",
          },
        },
        "receta_tecnica": {
          "include": {
            "producto": true,
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
        "id_version_receta": "VER00000001",
      },
    },
    "prisma": "version_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details > detalle de version > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Materiales requeridos</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Detalle de receta</h1>
<p>Receta: nombre_receta-1 · Versión: numero_version-1 · Producto: nombre_producto-1</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a versiones">
<svg/>Volver a versiones</button>
<a data-variant="outline" href="/dashboard/production/recipes/id_receta-1/versions/id_version_receta-1/requirements">Calcular materiales</a>
</div>
</div>
</section>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Materiales registrados</div>
</div>
</div>
<div>
<p>2</p>
<p>Total en esta versión.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Materia prima</div>
</div>
</div>
<div>
<p>0</p>
<p>Tipo de consumo principal.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Consumibles</div>
</div>
</div>
<div>
<p>0</p>
<p>Tipo de consumo secundario.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Costo estimado por unidad</div>
</div>
</div>
<div>
<p>S/ 653.71</p>
<p>Con merma incluida.</p>
</div>
</div>
</section>
<div>
<table>
<thead>
<tr>
<th>Código</th>
<th>Material</th>
<th>Tipo consumo</th>
<th>Cantidad base</th>
<th>Merma</th>
<th>Cant. con merma</th>
<th>Costo unitario</th>
<th>Costo estimado</th>
<th>Stock actual</th>
</tr>
</thead>
<tbody>
<tr>
<td>id_detalle_receta-1</td>
<td>
<div>nombre_material-1</div>
<p>Categoría: categoria-1</p>
<p>observaciones-1</p>
</td>
<td>tipo_consumo-1</td>
<td>11.50 unidad_medida-1</td>
<td>11.50%</td>
<td>12.82 unidad_medida-1</td>
<td>S/ 11.50</td>
<td>S/ 147.46</td>
<td>11.50 unidad_medida-1</td>
</tr>
<tr>
<td>id_detalle_receta-2</td>
<td>
<div>nombre_material-2</div>
<p>Categoría: categoria-2</p>
</td>
<td>tipo_consumo-2</td>
<td>22.50 unidad_medida-2</td>
<td>0.00%</td>
<td>22.50 unidad_medida-2</td>
<td>S/ 22.50</td>
<td>S/ 506.25</td>
<td>22.50 unidad_medida-2</td>
</tr>
</tbody>
</table>
</div>
<div role="alert">
<div>El costo estimado por unidad se calcula usando la cantidad requerida, la merma estimada y el costo unitario actual del material. Al generar una orden de trabajo, estos valores se multiplican por la cantidad a fabricar y se valida el stock disponible.</div>
</div>
<div role="alert">
<div>Esta versión ya fue usada por órdenes de trabajo. Sus materiales se conservan como historial y no deben modificarse; crea una nueva versión para futuros cambios.</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details > inexistente > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "orden_trabajo": true,
          },
        },
        "detalle_receta": {
          "include": {
            "material": true,
          },
          "orderBy": {
            "id_detalle_receta": "asc",
          },
        },
        "receta_tecnica": {
          "include": {
            "producto": true,
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
        "id_version_receta": "VER99999999",
      },
    },
    "prisma": "version_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details > inexistente > resultado 1`] = `
{
  "html": null,
  "outcome": "notFound",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/[detailId]/edit > detalle de otra receta > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "material": true,
        "version_receta": {
          "include": {
            "_count": {
              "select": {
                "orden_trabajo": true,
              },
            },
            "detalle_receta": {
              "select": {
                "id_material": true,
              },
            },
            "receta_tecnica": {
              "include": {
                "producto": true,
              },
            },
          },
        },
      },
      "where": {
        "id_detalle_receta": "DRE00000001",
        "id_version_receta": "VER00000001",
      },
    },
    "prisma": "detalle_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/[detailId]/edit > detalle de otra receta > resultado 1`] = `
{
  "html": null,
  "outcome": "notFound",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/[detailId]/edit > editar detalle de la receta > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "material": true,
        "version_receta": {
          "include": {
            "_count": {
              "select": {
                "orden_trabajo": true,
              },
            },
            "detalle_receta": {
              "select": {
                "id_material": true,
              },
            },
            "receta_tecnica": {
              "include": {
                "producto": true,
              },
            },
          },
        },
      },
      "where": {
        "id_detalle_receta": "DRE00000001",
        "id_version_receta": "VER00000001",
      },
    },
    "prisma": "detalle_receta.findFirst",
  },
  {
    "args": {
      "orderBy": [
        {
          "categoria": "asc",
        },
        {
          "nombre_material": "asc",
        },
      ],
      "where": {
        "OR": [
          {
            "estado": true,
            "id_material": {
              "notIn": [
                "id_material-2",
              ],
            },
          },
          {
            "id_material": "id_material-1",
          },
        ],
      },
    },
    "prisma": "material.findMany",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/[detailId]/edit > editar detalle de la receta > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Editar material</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Editar material de receta</h1>
<p>Receta: nombre_receta-1 · Versión: numero_version-1 · Producto: nombre_producto-1</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al detalle">
<svg/>Volver al detalle</button>
</div>
</div>
</section>
<div role="alert">
<div>Esta versión ya fue usada por órdenes de trabajo y no puede modificarse. Crea una nueva versión para cambiar materiales sin afectar órdenes históricas.</div>
</div>
<div role="alert">
<div>Esta versión no está vigente. Solo se pueden editar materiales de una versión vigente.</div>
</div>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_version_receta" value="id_version_receta-1"/>
<input type="hidden" name="id_detalle_receta" value="id_detalle_receta-1"/>
<div>
<div>
<label for="id_material-_R_55_">Material o insumo *</label>
<input type="hidden" name="id_material" value="id_material-1"/>
<div>
<input id="id_material-_R_55_" type="text" role="combobox" aria-autocomplete="list" aria-controls="id_material-_R_55_-listbox" aria-expanded="false" required="" disabled="" placeholder="Buscar material..." value="nombre_material-1"/>
<button type="button" disabled="">Limpiar</button>
</div>
</div>
<p>La unidad de medida se toma automáticamente desde el material registrado en inventario.</p>
</div>
<div>
<div>
<label for="cantidad_requerida">Cantidad requerida por unidad *</label>
<input type="number" id="cantidad_requerida" min="0.01" step="0.01" required="" disabled="" placeholder="Ej. 2.50" name="cantidad_requerida" value="11.5"/>
<p>Consumo para fabricar <strong>una</strong> unidad del producto (en unidad_medida-1).</p>
</div>
<div>
<label for="merma_estimada_porcentaje">Merma estimada (%)</label>
<input type="number" id="merma_estimada_porcentaje" min="0" max="100" step="0.01" disabled="" placeholder="Ej. 5" name="merma_estimada_porcentaje" value="11.5"/>
<p>Material que se pierde en el proceso. Aumenta lo que hay que sacar del almacén.</p>
</div>
</div>
<div>
<div>
<div>
<label for="preview_quantity">Simular para una orden de</label>
<input type="number" id="preview_quantity" min="1" step="1" value="10"/>
</div>
<p>unidades</p>
</div>
<div>
<ul>
<li>Consumo por unidad con merma: <span>12.82 unidad_medida-1</span>
</li>
<li>Requerimiento total: <span>128.22 unidad_medida-1</span>
</li>
</ul>
</div>
<p>Cálculo de referencia. No se guarda: sirve para verificar que la cantidad por unidad es la correcta.</p>
</div>
<div>
<label for="tipo_consumo">Tipo de consumo *</label>
<select id="tipo_consumo" name="tipo_consumo" required="" disabled="">
<option value="">Seleccione el tipo</option>
<option value="materia_prima">Materia prima</option>
<option value="consumible">Consumible</option>
<option value="auxiliar">Auxiliar</option>
</select>
</div>
<div>
<label for="observaciones">Observaciones</label>
<textarea id="observaciones" name="observaciones" rows="4" maxLength="700" disabled="" placeholder="Ej. Considerar margen adicional si la plancha viene con cortes irregulares.">observaciones-1</textarea>
</div>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-1/versions/id_version_receta-1/details">Cancelar</a>
<button data-variant="default" type="submit" disabled="">Guardar cambios</button>
</div>
</form>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/[detailId]/edit > inexistente > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "material": true,
        "version_receta": {
          "include": {
            "_count": {
              "select": {
                "orden_trabajo": true,
              },
            },
            "detalle_receta": {
              "select": {
                "id_material": true,
              },
            },
            "receta_tecnica": {
              "include": {
                "producto": true,
              },
            },
          },
        },
      },
      "where": {
        "id_detalle_receta": "DRE99999999",
        "id_version_receta": "VER00000001",
      },
    },
    "prisma": "detalle_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/[detailId]/edit > inexistente > resultado 1`] = `
{
  "html": null,
  "outcome": "notFound",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/new > inexistente > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "orden_trabajo": true,
          },
        },
        "detalle_receta": {
          "select": {
            "id_material": true,
          },
        },
        "receta_tecnica": {
          "include": {
            "producto": true,
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
        "id_version_receta": "VER99999999",
      },
    },
    "prisma": "version_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/new > inexistente > resultado 1`] = `
{
  "html": null,
  "outcome": "notFound",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/new > nuevo detalle > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "_count": {
          "select": {
            "orden_trabajo": true,
          },
        },
        "detalle_receta": {
          "select": {
            "id_material": true,
          },
        },
        "receta_tecnica": {
          "include": {
            "producto": true,
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
        "id_version_receta": "VER00000001",
      },
    },
    "prisma": "version_receta.findFirst",
  },
  {
    "args": {
      "orderBy": [
        {
          "categoria": "asc",
        },
        {
          "nombre_material": "asc",
        },
      ],
      "where": {
        "estado": true,
        "id_material": {
          "notIn": [
            "id_material-1",
            "id_material-2",
          ],
        },
      },
    },
    "prisma": "material.findMany",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/details/new > nuevo detalle > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Agregar material</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Agregar material a receta</h1>
<p>Receta: nombre_receta-1 · Versión: numero_version-1 · Producto: nombre_producto-1</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al detalle">
<svg/>Volver al detalle</button>
</div>
</div>
</section>
<div role="alert">
<div>Esta versión no está vigente. Solo se pueden agregar materiales a una versión vigente.</div>
</div>
<div role="alert">
<div>Esta receta no está activa. Actívala antes de agregar materiales.</div>
</div>
<div role="alert">
<div>Esta versión ya fue usada por órdenes de trabajo. Crea una nueva versión para cambiar materiales sin afectar órdenes históricas.</div>
</div>
<div role="alert">
<div>La cantidad registrada representa el consumo estimado para fabricar<strong> una unidad</strong> del producto. Se multiplica por la cantidad de la orden al calcular los materiales requeridos.</div>
</div>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_version_receta" value="id_version_receta-1"/>
<div>
<div>
<label for="id_material-_R_57_">Material o insumo *</label>
<input type="hidden" name="id_material" value=""/>
<div>
<input id="id_material-_R_57_" type="text" role="combobox" aria-autocomplete="list" aria-controls="id_material-_R_57_-listbox" aria-expanded="false" required="" disabled="" placeholder="Buscar material..." value=""/>
</div>
</div>
<p>La unidad de medida se toma automáticamente desde el material registrado en inventario.</p>
</div>
<div>
<div>
<label for="cantidad_requerida">Cantidad requerida por unidad *</label>
<input type="number" id="cantidad_requerida" min="0.01" step="0.01" required="" disabled="" placeholder="Ej. 2.50" name="cantidad_requerida" value=""/>
<p>Consumo para fabricar <strong>una</strong> unidad del producto.</p>
</div>
<div>
<label for="merma_estimada_porcentaje">Merma estimada (%)</label>
<input type="number" id="merma_estimada_porcentaje" min="0" max="100" step="0.01" disabled="" placeholder="Ej. 5" name="merma_estimada_porcentaje" value=""/>
<p>Material que se pierde en el proceso. Aumenta lo que hay que sacar del almacén.</p>
</div>
</div>
<div>
<label for="tipo_consumo">Tipo de consumo *</label>
<select id="tipo_consumo" name="tipo_consumo" required="" disabled="">
<option value="" selected="">Seleccione el tipo</option>
<option value="materia_prima">Materia prima</option>
<option value="consumible">Consumible</option>
<option value="auxiliar">Auxiliar</option>
</select>
</div>
<div>
<label for="observaciones">Observaciones</label>
<textarea id="observaciones" name="observaciones" rows="4" maxLength="700" disabled="" placeholder="Ej. Considerar margen adicional si la plancha viene con cortes irregulares.">
</textarea>
</div>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-1/versions/id_version_receta-1/details">Cancelar</a>
<button data-variant="default" type="submit" disabled="">Guardar material</button>
</div>
</form>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/requirements > cantidad elegida > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "detalle_receta": {
          "include": {
            "material": true,
          },
          "orderBy": {
            "id_detalle_receta": "asc",
          },
        },
        "receta_tecnica": {
          "include": {
            "producto": true,
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
        "id_version_receta": "VER00000001",
      },
    },
    "prisma": "version_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/requirements > cantidad elegida > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Cálculo de materiales</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Cálculo de materiales requeridos</h1>
<p>Receta: nombre_receta-1 · Versión: numero_version-1 · Producto: nombre_producto-1</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al detalle">
<svg/>Volver al detalle</button>
</div>
</div>
</section>
<div role="alert">
<div>Esta versión no está vigente. El cálculo se muestra solo como referencia.</div>
</div>
<div role="alert">
<div>Esta receta no está activa. El cálculo se muestra solo como referencia.</div>
</div>
<section>
<form>
<div>
<label for="quantity">Cantidad a fabricar *</label>
<input type="number" id="quantity" min="0.01" step="0.01" name="quantity" value="25"/>
<p>El sistema multiplicará los materiales de la receta por esta cantidad.</p>
</div>
<button data-variant="default" type="submit">Calcular</button>
</form>
</section>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Cantidad a fabricar</div>
</div>
</div>
<div>
<p>25.00</p>
<p>Unidades objetivo.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Materiales evaluados</div>
</div>
</div>
<div>
<p>2</p>
<p>Del detalle de receta.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Con stock suficiente</div>
</div>
</div>
<div>
<p>0</p>
<p>Listos para producir.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Costo estimado total</div>
</div>
</div>
<div>
<p>S/ 16342.69</p>
<p>Con merma incluida.</p>
</div>
</div>
</section>
<div role="alert">
<div>Hay 2 material(es) sin stock suficiente para esta producción. Revisa la columna de faltante antes de crear una orden de trabajo.</div>
</div>
<div>
<table>
<thead>
<tr>
<th>Material</th>
<th>Tipo</th>
<th>Cant. por unidad</th>
<th>Requerido base</th>
<th>Merma</th>
<th>Requerido total</th>
<th>Stock disponible</th>
<th>Faltante</th>
<th>Costo estimado</th>
<th>Estado</th>
</tr>
</thead>
<tbody>
<tr>
<td>
<div>nombre_material-1</div>
<p>Categoría: categoria-1</p>
<p>observaciones-1</p>
</td>
<td>tipo_consumo-1</td>
<td>11.50 unidad_medida-1</td>
<td>287.50 unidad_medida-1</td>
<td>11.50%</td>
<td>320.56 unidad_medida-1</td>
<td>0.00 unidad_medida-1<p>Stock: 11.50 · Reservado: 11.50</p>
</td>
<td>320.56 unidad_medida-1</td>
<td>S/ 3686.44</td>
<td>
<span data-variant="destructive">Insuficiente</span>
</td>
</tr>
<tr>
<td>
<div>nombre_material-2</div>
<p>Categoría: categoria-2</p>
</td>
<td>tipo_consumo-2</td>
<td>22.50 unidad_medida-2</td>
<td>562.50 unidad_medida-2</td>
<td>0.00%</td>
<td>562.50 unidad_medida-2</td>
<td>0.00 unidad_medida-2<p>Stock: 22.50 · Reservado: 22.50</p>
</td>
<td>562.50 unidad_medida-2</td>
<td>S/ 12656.25</td>
<td>
<span data-variant="destructive">Insuficiente</span>
</td>
</tr>
</tbody>
</table>
</div>
<div role="alert">
<div>El sistema usa el stock disponible, es decir, stock actual menos stock reservado. Si la cantidad requerida total supera el stock disponible, se marca como insuficiente y se muestra el faltante.</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/requirements > cantidad invalida > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "detalle_receta": {
          "include": {
            "material": true,
          },
          "orderBy": {
            "id_detalle_receta": "asc",
          },
        },
        "receta_tecnica": {
          "include": {
            "producto": true,
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
        "id_version_receta": "VER00000001",
      },
    },
    "prisma": "version_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/requirements > cantidad invalida > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Cálculo de materiales</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Cálculo de materiales requeridos</h1>
<p>Receta: nombre_receta-1 · Versión: numero_version-1 · Producto: nombre_producto-1</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al detalle">
<svg/>Volver al detalle</button>
</div>
</div>
</section>
<div role="alert">
<div>La cantidad ingresada no es válida. Se está mostrando el cálculo para una unidad.</div>
</div>
<div role="alert">
<div>Esta versión no está vigente. El cálculo se muestra solo como referencia.</div>
</div>
<div role="alert">
<div>Esta receta no está activa. El cálculo se muestra solo como referencia.</div>
</div>
<section>
<form>
<div>
<label for="quantity">Cantidad a fabricar *</label>
<input type="number" id="quantity" min="0.01" step="0.01" name="quantity" value="1"/>
<p>El sistema multiplicará los materiales de la receta por esta cantidad.</p>
</div>
<button data-variant="default" type="submit">Calcular</button>
</form>
</section>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Cantidad a fabricar</div>
</div>
</div>
<div>
<p>1.00</p>
<p>Unidades objetivo.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Materiales evaluados</div>
</div>
</div>
<div>
<p>2</p>
<p>Del detalle de receta.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Con stock suficiente</div>
</div>
</div>
<div>
<p>0</p>
<p>Listos para producir.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Costo estimado total</div>
</div>
</div>
<div>
<p>S/ 653.68</p>
<p>Con merma incluida.</p>
</div>
</div>
</section>
<div role="alert">
<div>Hay 2 material(es) sin stock suficiente para esta producción. Revisa la columna de faltante antes de crear una orden de trabajo.</div>
</div>
<div>
<table>
<thead>
<tr>
<th>Material</th>
<th>Tipo</th>
<th>Cant. por unidad</th>
<th>Requerido base</th>
<th>Merma</th>
<th>Requerido total</th>
<th>Stock disponible</th>
<th>Faltante</th>
<th>Costo estimado</th>
<th>Estado</th>
</tr>
</thead>
<tbody>
<tr>
<td>
<div>nombre_material-1</div>
<p>Categoría: categoria-1</p>
<p>observaciones-1</p>
</td>
<td>tipo_consumo-1</td>
<td>11.50 unidad_medida-1</td>
<td>11.50 unidad_medida-1</td>
<td>11.50%</td>
<td>12.82 unidad_medida-1</td>
<td>0.00 unidad_medida-1<p>Stock: 11.50 · Reservado: 11.50</p>
</td>
<td>12.82 unidad_medida-1</td>
<td>S/ 147.43</td>
<td>
<span data-variant="destructive">Insuficiente</span>
</td>
</tr>
<tr>
<td>
<div>nombre_material-2</div>
<p>Categoría: categoria-2</p>
</td>
<td>tipo_consumo-2</td>
<td>22.50 unidad_medida-2</td>
<td>22.50 unidad_medida-2</td>
<td>0.00%</td>
<td>22.50 unidad_medida-2</td>
<td>0.00 unidad_medida-2<p>Stock: 22.50 · Reservado: 22.50</p>
</td>
<td>22.50 unidad_medida-2</td>
<td>S/ 506.25</td>
<td>
<span data-variant="destructive">Insuficiente</span>
</td>
</tr>
</tbody>
</table>
</div>
<div role="alert">
<div>El sistema usa el stock disponible, es decir, stock actual menos stock reservado. Si la cantidad requerida total supera el stock disponible, se marca como insuficiente y se muestra el faltante.</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/requirements > inexistente > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "detalle_receta": {
          "include": {
            "material": true,
          },
          "orderBy": {
            "id_detalle_receta": "asc",
          },
        },
        "receta_tecnica": {
          "include": {
            "producto": true,
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
        "id_version_receta": "VER99999999",
      },
    },
    "prisma": "version_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/requirements > inexistente > resultado 1`] = `
{
  "html": null,
  "outcome": "notFound",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/requirements > una unidad > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "detalle_receta": {
          "include": {
            "material": true,
          },
          "orderBy": {
            "id_detalle_receta": "asc",
          },
        },
        "receta_tecnica": {
          "include": {
            "producto": true,
          },
        },
      },
      "where": {
        "id_receta": "REC00000001",
        "id_version_receta": "VER00000001",
      },
    },
    "prisma": "version_receta.findFirst",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/[versionId]/requirements > una unidad > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Cálculo de materiales</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Cálculo de materiales requeridos</h1>
<p>Receta: nombre_receta-1 · Versión: numero_version-1 · Producto: nombre_producto-1</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver al detalle">
<svg/>Volver al detalle</button>
</div>
</div>
</section>
<div role="alert">
<div>Esta versión no está vigente. El cálculo se muestra solo como referencia.</div>
</div>
<div role="alert">
<div>Esta receta no está activa. El cálculo se muestra solo como referencia.</div>
</div>
<section>
<form>
<div>
<label for="quantity">Cantidad a fabricar *</label>
<input type="number" id="quantity" min="0.01" step="0.01" name="quantity" value="1"/>
<p>El sistema multiplicará los materiales de la receta por esta cantidad.</p>
</div>
<button data-variant="default" type="submit">Calcular</button>
</form>
</section>
<section>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Cantidad a fabricar</div>
</div>
</div>
<div>
<p>1.00</p>
<p>Unidades objetivo.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Materiales evaluados</div>
</div>
</div>
<div>
<p>2</p>
<p>Del detalle de receta.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Con stock suficiente</div>
</div>
</div>
<div>
<p>0</p>
<p>Listos para producir.</p>
</div>
</div>
<div>
<div>
<div>
<span>
<svg/>
</span>
<div>Costo estimado total</div>
</div>
</div>
<div>
<p>S/ 653.68</p>
<p>Con merma incluida.</p>
</div>
</div>
</section>
<div role="alert">
<div>Hay 2 material(es) sin stock suficiente para esta producción. Revisa la columna de faltante antes de crear una orden de trabajo.</div>
</div>
<div>
<table>
<thead>
<tr>
<th>Material</th>
<th>Tipo</th>
<th>Cant. por unidad</th>
<th>Requerido base</th>
<th>Merma</th>
<th>Requerido total</th>
<th>Stock disponible</th>
<th>Faltante</th>
<th>Costo estimado</th>
<th>Estado</th>
</tr>
</thead>
<tbody>
<tr>
<td>
<div>nombre_material-1</div>
<p>Categoría: categoria-1</p>
<p>observaciones-1</p>
</td>
<td>tipo_consumo-1</td>
<td>11.50 unidad_medida-1</td>
<td>11.50 unidad_medida-1</td>
<td>11.50%</td>
<td>12.82 unidad_medida-1</td>
<td>0.00 unidad_medida-1<p>Stock: 11.50 · Reservado: 11.50</p>
</td>
<td>12.82 unidad_medida-1</td>
<td>S/ 147.43</td>
<td>
<span data-variant="destructive">Insuficiente</span>
</td>
</tr>
<tr>
<td>
<div>nombre_material-2</div>
<p>Categoría: categoria-2</p>
</td>
<td>tipo_consumo-2</td>
<td>22.50 unidad_medida-2</td>
<td>22.50 unidad_medida-2</td>
<td>0.00%</td>
<td>22.50 unidad_medida-2</td>
<td>0.00 unidad_medida-2<p>Stock: 22.50 · Reservado: 22.50</p>
</td>
<td>22.50 unidad_medida-2</td>
<td>S/ 506.25</td>
<td>
<span data-variant="destructive">Insuficiente</span>
</td>
</tr>
</tbody>
</table>
</div>
<div role="alert">
<div>El sistema usa el stock disponible, es decir, stock actual menos stock reservado. Si la cantidad requerida total supera el stock disponible, se marca como insuficiente y se muestra el faltante.</div>
</div>
</main>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/new > inexistente > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "producto": true,
        "version_receta": {
          "include": {
            "detalle_receta": {
              "include": {
                "material": true,
              },
              "orderBy": {
                "id_detalle_receta": "asc",
              },
            },
          },
          "orderBy": {
            "fecha_version": "desc",
          },
          "take": 1,
        },
      },
      "where": {
        "id_receta": "REC99999999",
      },
    },
    "prisma": "receta_tecnica.findUnique",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "categoria": true,
        "costo_unitario_actual": true,
        "id_material": true,
        "nombre_material": true,
        "unidad_medida": true,
      },
      "where": {
        "estado": true,
      },
    },
    "prisma": "material.findMany",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/new > inexistente > resultado 1`] = `
{
  "html": null,
  "outcome": "notFound",
}
`;

exports[`/dashboard/production/recipes/[id]/versions/new > nueva version > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "producto": true,
        "version_receta": {
          "include": {
            "detalle_receta": {
              "include": {
                "material": true,
              },
              "orderBy": {
                "id_detalle_receta": "asc",
              },
            },
          },
          "orderBy": {
            "fecha_version": "desc",
          },
          "take": 1,
        },
      },
      "where": {
        "id_receta": "REC00000001",
      },
    },
    "prisma": "receta_tecnica.findUnique",
  },
  {
    "args": {
      "orderBy": {
        "nombre_material": "asc",
      },
      "select": {
        "categoria": true,
        "costo_unitario_actual": true,
        "id_material": true,
        "nombre_material": true,
        "unidad_medida": true,
      },
      "where": {
        "estado": true,
      },
    },
    "prisma": "material.findMany",
  },
]
`;

exports[`/dashboard/production/recipes/[id]/versions/new > nueva version > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Nueva versión</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Nueva versión de receta</h1>
<p>Receta: nombre_receta-1 · Producto: nombre_producto-1</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a versiones">
<svg/>Volver a versiones</button>
</div>
</div>
</section>
<div role="alert">
<div>Esta receta no está activa. Actívala antes de crear una nueva versión.</div>
</div>
<div role="alert">
<div>Se cargaron como base los materiales de la versión <span>numero_version-1</span>. Puedes ajustarlos antes de guardar la nueva versión vigente.</div>
</div>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<input type="hidden" name="id_receta" value="id_receta-1"/>
<div>
<label>Motivo o descripción</label>
<textarea name="motivo_cambio" rows="4" maxLength="700" placeholder="Ej. Ajuste de materiales por cambio de proveedor o mejora de proceso." disabled="">Nueva versión de receta técnica.</textarea>
</div>
<section>
<div>
<div>
<h2>Materiales de la versión</h2>
<p>La nueva versión quedará vigente y reemplazará la versión vigente anterior.</p>
</div>
<button data-variant="outline" type="button" disabled="">Agregar material</button>
</div>
<div>
<div>
<div>
<h3>Material 1</h3>
<button data-variant="ghost" type="button">Quitar</button>
</div>
<div>
<div>
<label for="id_material-_R_6d5_">Material *</label>
<input type="hidden" name="id_material" value="id_material-1"/>
<div>
<input id="id_material-_R_6d5_" type="text" role="combobox" aria-autocomplete="list" aria-controls="id_material-_R_6d5_-listbox" aria-expanded="false" required="" disabled="" placeholder="Buscar material..." value="nombre_material-1"/>
<button type="button" disabled="">Limpiar</button>
</div>
</div>
<div>
<label>Cantidad *</label>
<input type="number" min="0.01" step="0.01" required="" disabled="" name="cantidad_requerida" value="11.5"/>
</div>
<div>
<label>Tipo *</label>
<select name="tipo_consumo" required="" disabled="">
<option value="materia_prima">Materia prima</option>
<option value="consumible">Consumible</option>
<option value="auxiliar">Auxiliar</option>
</select>
</div>
<div>
<label>Merma %</label>
<input type="number" min="0" max="100" step="0.01" disabled="" name="merma_estimada_porcentaje" value="11.5"/>
</div>
</div>
<div>
<label>Observaciones</label>
<input disabled="" placeholder="Observación opcional del material." name="observaciones_detalle" value="observaciones-1"/>
</div>
</div>
<div>
<div>
<h3>Material 2</h3>
<button data-variant="ghost" type="button">Quitar</button>
</div>
<div>
<div>
<label for="id_material-_R_6l5_">Material *</label>
<input type="hidden" name="id_material" value="id_material-2"/>
<div>
<input id="id_material-_R_6l5_" type="text" role="combobox" aria-autocomplete="list" aria-controls="id_material-_R_6l5_-listbox" aria-expanded="false" required="" disabled="" placeholder="Buscar material..." value="nombre_material-2"/>
<button type="button" disabled="">Limpiar</button>
</div>
</div>
<div>
<label>Cantidad *</label>
<input type="number" min="0.01" step="0.01" required="" disabled="" name="cantidad_requerida" value="22.5"/>
</div>
<div>
<label>Tipo *</label>
<select name="tipo_consumo" required="" disabled="">
<option value="materia_prima">Materia prima</option>
<option value="consumible">Consumible</option>
<option value="auxiliar">Auxiliar</option>
</select>
</div>
<div>
<label>Merma %</label>
<input type="number" min="0" max="100" step="0.01" disabled="" name="merma_estimada_porcentaje" value="0"/>
</div>
</div>
<div>
<label>Observaciones</label>
<input disabled="" placeholder="Observación opcional del material." name="observaciones_detalle" value=""/>
</div>
</div>
</div>
</section>
<div>
<a data-variant="link" href="/dashboard/production/recipes/id_receta-1/versions">Cancelar</a>
<button data-variant="default" type="submit" disabled="">Crear versión vigente</button>
</div>
</form>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;

exports[`/dashboard/production/recipes/new > formulario > llamadas 1`] = `
[
  {
    "authz": "requireRole",
    "roles": [
      "ADMIN",
      "WORKSHOP_MASTER",
    ],
  },
  {
    "args": {
      "include": {
        "receta_tecnica": {
          "select": {
            "estado": true,
            "id_receta": true,
            "nombre_receta": true,
          },
        },
      },
      "orderBy": [
        {
          "categoria": "asc",
        },
        {
          "nombre_producto": "asc",
        },
      ],
      "where": {
        "estado": true,
      },
    },
    "prisma": "producto.findMany",
  },
]
`;

exports[`/dashboard/production/recipes/new > formulario > resultado 1`] = `
{
  "html": "<main>
<section>
<nav aria-label="Ruta de navegación">
<ol>
<li>
<a href="/dashboard">Dashboard</a>
</li>
<li>
<svg/>
<a href="/dashboard/production">Producción</a>
</li>
<li>
<svg/>
<a href="/dashboard/production/recipes">Recetas</a>
</li>
<li>
<svg/>
<span aria-current="page">Nueva receta</span>
</li>
</ol>
</nav>
<div>
<div>
<div aria-hidden="true">
</div>
<div>
<h1>Nueva receta técnica</h1>
<p>Registra la receta técnica base de un producto. Luego agregaremos versiones y materiales requeridos.</p>
</div>
</div>
<div>
<button type="button" aria-label="Volver a recetas">
<svg/>Volver a recetas</button>
</div>
</div>
</section>
<form action="javascript:throw new Error(&#x27;React form unexpectedly submitted.&#x27;)">
<div>
<div>
<label for="id_producto-_R_17_">Producto *</label>
<input type="hidden" name="id_producto" value=""/>
<div>
<input id="id_producto-_R_17_" type="text" role="combobox" aria-autocomplete="list" aria-controls="id_producto-_R_17_-listbox" aria-expanded="false" required="" placeholder="Buscar producto..." value=""/>
</div>
</div>
<p>Puedes tener más de una receta por producto siempre que el nombre de la receta sea diferente.</p>
</div>
<div>
<label>Nombre de la receta *</label>
<input required="" maxLength="100" placeholder="Ej. Receta técnica estándar para lampa" name="nombre_receta"/>
</div>
<div>
<label>Descripción técnica</label>
<textarea name="descripcion" rows="5" maxLength="700" placeholder="Ej. Receta base para fabricar lampas metálicas considerando materiales principales, consumibles y procesos estándar.">
</textarea>
</div>
<div role="alert">
<div>En esta pantalla solo registramos la cabecera de la receta técnica. Luego agregarás la versión inicial y registrarás los materiales, cantidades, unidad de medida, tipo de consumo y merma estimada.</div>
</div>
<div>
<a data-variant="link" href="/dashboard/production/recipes">Cancelar</a>
<button data-variant="default" type="submit">Guardar receta</button>
</div>
</form>
</main>
<script>addEventListener("submit",function(a){if(!a.defaultPrevented){var c=a.target,d=a.submitter,e=c.action,b=d;if(d){var f=d.getAttribute("formAction");null!=f&&(e=f,b=null)}"javascript:throw new Error('React form unexpectedly submitted.')"===e&&(a.preventDefault(),b?(a=document.createElement("input"),a.name=b.name,a.value=b.value,b.parentNode.insertBefore(a,b),b=new FormData(c),a.parentNode.removeChild(a)):b=new FormData(c),a=c.ownerDocument||c,(a.$$reactFormReplay=a.$$reactFormReplay||[]).push(c,d,b))}});</script>",
  "outcome": "render",
}
`;
